# s3-cli-static-hosting

./: .env.example  .gitignore  README.md  auth.py  main.py  pyproject.toml  requirements.txt
static_hosting/: host.py  permissions.py
